--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 h1{
   text-shadow: 20px 9px 3px #c491c0;
   text-align: center
@@ -46,4 +49,8 @@ li a {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+}
+iframe{
+    width="350";
+    height="430";
 }
